--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+JWT_SECRET=
+
+TESTING_DUMP_RESPONSE=false
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
