--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,17 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-gmp": "*",
+        "ext-json": "*",
+        "ext-pdo": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "phpmath/biginteger": "^2.1",
-        "ext-json": "*"
+        "phpseclib/phpseclib": "~3.0",
+        "santigarcor/laravel-vuetable": "^1.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -37,6 +41,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/Helper.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
