--- a/package.json
+++ b/package.json
@@ -10,11 +10,34 @@
         "production": "mix --production"
     },
     "dependencies": {
+        "@vue/babel-preset-app": "^4.5.11",
+        "@vue/compiler-sfc": "^3.0.7",
         "axios": "^0.21",
+        "bigint-crypto-utils": "^3.0.9",
+        "crypto-browserify": "^3.12.0",
+        "foundation": "^4.2.1-1",
+        "iconv-lite": "^0.6.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "normalize.css": "8.0.1",
+        "postcss": "^8.2.8",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
+        "sha1": "^1.1.1",
+        "sha2": "^1.0.2",
+        "toastr": "^2.1.4",
+        "vue": "^2.5.11",
+        "vue-axios": "^3.2.4",
+        "vue-form-wizard": "^0.8.4",
+        "vue-js-modal": "^2.0.0-rc.6",
+        "vue-loader": "^15.9.6",
+        "vue-moment": "^4.1.0",
+        "vue-router": "^3.5.1",
+        "vue-social-auth": "^1.4.8",
+        "vue-toastr-2": "0.0.10",
+        "vuetable-3": "^3.3.3",
+        "vuex": "^3.6.2"
     },
-    "devDependencies": {
-    }
+    "devDependencies": {}
 }
