--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "toastr": "^2.1.4",
         "vue": "^2.5.11",
         "vue-axios": "^3.2.4",
+        "vue-country-flag": "^2.0.4",
         "vue-d3-network": "^0.1.28",
         "vue-form-wizard": "^0.8.4",
         "vue-i18n": "^8.24.3",
