--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
 
   webserver:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-    image: registry.gitlab.com/biscofil/thelios:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+#    image: registry.gitlab.com/biscofil/thelios:latest
     restart: unless-stopped
     tty: true
     depends_on:
@@ -27,12 +27,23 @@ services:
     user: "${U_ID}:${G_ID}"
 
   php-queue:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-    image: registry.gitlab.com/biscofil/thelios:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+#    image: registry.gitlab.com/biscofil/thelios:latest
     restart: always
     command: php artisan queue:work
+    volumes:
+      - '.:/var/www/html'
+
+  cronjob:
+    build:
+      context: .
+      dockerfile: Dockerfile
+#    image: registry.gitlab.com/biscofil/thelios:latest
+    command: ./run-scheduler.sh
+    restart: unless-stopped
+    working_dir: /var/www/html
     volumes:
       - '.:/var/www/html'
 
