new bootstrap style

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "@vue/babel-preset-app": "^4.5.12",
         "@vue/compiler-sfc": "^3.0.11",
         "axios": "^0.21",
-        "bigint-crypto-utils": "^3.0.11",
+        "bigint-crypto-utils": "^3.0.12",
+        "bootstrap": "^4.6.0",
         "crypto-browserify": "^3.12.0",
-        "foundation": "^4.2.1-1",
         "iconv-lite": "^0.6.2",
         "laravel-mix": "^6.0.16",
         "laravel-mix-sri": "0.0.6",
