--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
         "bootstrap": "^4.6.0",
         "crypto-browserify": "^3.12.0",
         "iconv-lite": "^0.6.2",
-        "laravel-mix": "^6.0.16",
+        "laravel-mix": "^6.0.17",
         "laravel-mix-sri": "0.0.6",
         "lodash": "^4.17.19",
         "node-rsa": "^1.1.1",
         "normalize.css": "8.0.1",
-        "postcss": "^8.2.9",
+        "postcss": "^8.2.10",
         "pusher-js": "^7.0.3",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.8",
+        "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "sha1": "^1.1.1",
         "sha2": "^1.0.2",
@@ -46,7 +46,5 @@
         "vuetable-3": "^3.3.3",
         "vuex": "^3.6.2"
     },
-    "devDependencies": {
-        "laravel-echo": "^1.10.0"
-    }
+    "devDependencies": {}
 }
