--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ php_test:
     - php artisan route:clear
     - php artisan view:clear
     - php artisan key:generate
+    - php artisan generate:jwt-keypair
     - php artisan config:cache
     - php artisan route:cache
     - php artisan migrate
