GlobusMap offers both geodesic and linear interpolation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@kazupon/vue-i18n-loader": "^0.5.0",
         "@vue/babel-preset-app": "^4.5.12",
         "@vue/compiler-sfc": "^3.0.11",
+        "arc": "^0.1.1",
         "axios": "^0.21",
         "bigint-crypto-utils": "^3.0.12",
         "bootstrap": "^4.6.0",
@@ -30,6 +31,7 @@
         "sass-loader": "^11.0.1",
         "sha1": "^1.1.1",
         "sha2": "^1.0.2",
+        "tinygradient": "^1.1.4",
         "toastr": "^2.1.4",
         "vue": "^2.5.11",
         "vue-axios": "^3.2.4",
