--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "axios": "^0.21",
         "bigint-crypto-utils": "^3.0.12",
         "bootstrap": "^4.6.0",
+        "bootswatch": "^5.0.0",
         "crypto-browserify": "^3.12.0",
         "iconv-lite": "^0.6.2",
         "laravel-mix": "^6.0.17",
