election votes view with VueObjectView column

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-loader": "^15.9.6",
         "vue-moment": "^4.1.0",
+        "vue-object-view": "^0.4.2",
         "vue-query-builder": "^0.8.2",
         "vue-router": "^3.5.1",
         "vue-social-auth": "^1.4.9",
