--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bootswatch": "^5.0.0",
         "crypto-browserify": "^3.12.0",
         "iconv-lite": "^0.6.2",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.17",
         "laravel-mix-sri": "0.0.6",
         "lodash": "^4.17.19",
