--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "ext-json": "*",
         "ext-pdo": "*",
         "ext-sqlite3": "*",
+        "api-clients/pusher": "^1.2",
         "bensampo/laravel-enum": "^3.3",
-        "beyondcode/laravel-websockets": "^1.11",
         "elhebert/laravel-sri": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
