--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
             "@php artisan package:discover --ansi"
         ],
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php -r \"file_exists('db.env') || copy('db.env.example', 'db.env');\""
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
