--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,8 @@ yarn-error.log
 /public/mix-manifest.json
 /public/mix-sri.json
 /public/.rnd
-/private_key.pem
-/public_key.pem
+/apache2.conf
+/resources/js/github/vuesocial/
+/public/vuesocial/
+/public/assets/
+/letsencrypt/
