--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "vue-object-view": "^0.4.2",
         "vue-query-builder": "^0.8.2",
         "vue-router": "^3.5.1",
+        "vue-slicksort": "^1.2.0",
         "vue-social-auth": "^1.4.9",
         "vue-toastr-2": "0.0.10",
         "vuejs-dialog": "^1.4.2",
