--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-sqlite3": "*",
         "api-clients/pusher": "^1.2",
         "bensampo/laravel-enum": "^3.3",
+        "doctrine/dbal": "^3.1",
         "elhebert/laravel-sri": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
