--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "bigint-crypto-utils": "^3.0.12",
         "bootstrap": "^4.6.0",
         "bootswatch": "^5.0.0",
+        "chart.js": "^3.3.2",
         "crypto-browserify": "^3.12.0",
         "iconv-lite": "^0.6.2",
         "install": "^0.13.0",
@@ -42,6 +43,7 @@
         "toastr": "^2.1.4",
         "vue": "^2.5.11",
         "vue-axios": "^3.2.4",
+        "vue-chartjs": "^3.5.1",
         "vue-country-flag": "^2.0.4",
         "vue-datetime": "^1.0.0-beta.14",
         "vue-form-wizard": "^0.8.4",
