--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,21 +15,28 @@ jobs:
         MYSQL_ROOT_PASSWORD: your_mysql_root_password
         DB_HOST: mysql
         DB_USERNAME: root
+        
     services:
       mysql:
-        image: biscofil/kairos_php:no_user
+        image: mysql:8
         env:
           MYSQL_DATABASE: laravel
           MYSQL_ROOT_PASSWORD: your_mysql_root_password
           DB_HOST: mysql
           DB_USERNAME: root
+          
     # coverage: &cov '/^\s*Lines:\s*(\d+.\d+)\%/'
     # Cache libraries in between jobs
     #cache:
     #  key: composer_cache
     #  paths:
     #    - vendor/
+    
     steps:
+    - uses: actions/checkout@v1
+      with:
+         fetch-depth: 1
+    
     - name: test php
       run: |
         cp .env.example .env
@@ -59,6 +66,17 @@ jobs:
         MYSQL_ROOT_PASSWORD: your_mysql_root_password
         DB_HOST: mysql
         DB_USERNAME: root
+        
+    
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_DATABASE: laravel
+          MYSQL_ROOT_PASSWORD: your_mysql_root_password
+          DB_HOST: mysql
+          DB_USERNAME: root
+        
     steps:
     - name: test db
       run: |
@@ -81,6 +99,7 @@ jobs:
         MYSQL_ROOT_PASSWORD: your_mysql_root_password
         DB_HOST: mysql
         DB_USERNAME: root
+        
     steps:
     - name: test npm
       run: |
