--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -66,7 +66,6 @@ jobs:
         MYSQL_ROOT_PASSWORD: your_mysql_root_password
         DB_HOST: mysql
         DB_USERNAME: root
-        
     
     services:
       mysql:
@@ -78,6 +77,11 @@ jobs:
           DB_USERNAME: root
         
     steps:
+    
+    - uses: actions/checkout@v1
+      with:
+         fetch-depth: 1
+         
     - name: test db
       run: |
         cp .env.example .env
@@ -101,6 +105,10 @@ jobs:
         DB_USERNAME: root
         
     steps:
+    - uses: actions/checkout@v1
+      with:
+         fetch-depth: 1
+    
     - name: test npm
       run: |
         echo NPM INSTALL
