--- a/helm/templates/db-env-configmap.yaml
+++ b/helm/templates/db-env-configmap.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: kairos-database-db-env
-  name: kairos-database-db-env
+    label: kairos-database-env
+  name: kairos-database-env
 data:
   MYSQL_DATABASE: laravel
-  MYSQL_ROOT_PASSWORD: your_mysql_root_password
+  # MYSQL_ROOT_PASSWORD: from secret
   SERVICE_NAME: mysql
   SERVICE_TAGS: dev
