--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
 	"editor.insertSpaces": true,
-	"editor.formatOnSave": true, 
+  "editor.formatOnSave": false,
 	"editor.detectIndentation": false
 }
