--- a/helm/templates/database-claim.yaml
+++ b/helm/templates/database-claim.yaml
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: kairos-database-claim
+    label: kairos-database-claim
   name: kairos-database-claim
 spec:
   accessModes:
