--- a/helm/templates/database-deployment.yaml
+++ b/helm/templates/database-deployment.yaml
@@ -1,45 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: kairos-database
+    label: kairos-database
   name: kairos-database
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: kairos-database
+      label: kairos-database
   strategy:
     type: Recreate
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.service: kairos-database
+        label: kairos-database
     spec:
       containers:
-        - env:
-            - name: MYSQL_DATABASE
-              valueFrom:
-                configMapKeyRef:
-                  key: MYSQL_DATABASE
-                  name: kairos-database-db-env
+        - envFrom:
+            - configMapRef:
+                name: kairos-database-env
+          env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
-                configMapKeyRef:
-                  key: MYSQL_ROOT_PASSWORD
-                  name: kairos-database-db-env
-            - name: SERVICE_NAME
-              valueFrom:
-                configMapKeyRef:
-                  key: SERVICE_NAME
-                  name: kairos-database-db-env
-            - name: SERVICE_TAGS
-              valueFrom:
-                configMapKeyRef:
-                  key: SERVICE_TAGS
-                  name: kairos-database-db-env
+                secretKeyRef:
+                  name: kairos-secrets
+                  key: DB_PASSWORD
           image: mysql:8
           name: kairos-database
           imagePullPolicy: Always
