--- a/helm/templates/database-service.yaml
+++ b/helm/templates/database-service.yaml
@@ -1,16 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: kairos-database
-  name: kairos-database
+    label: {{.Values.database.serviceName}}
+  name: {{.Values.database.serviceName}}
 spec:
   ports:
     - name: "3306"
       port: 3306
       targetPort: 3306
   selector:
-    io.kompose.service: kairos-database
+    label: kairos-database
 status:
   loadBalancer: {}
