--- a/helm/templates/webserver-deployment.yaml
+++ b/helm/templates/webserver-deployment.yaml
@@ -1,37 +1,41 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: kairos-webserver
+  # labels:
+  #   label: kairos-webserver
   name: kairos-webserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: kairos-webserver
+      label: kairos-webserver
   strategy:
     type: Recreate
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.service: kairos-webserver
+        label: kairos-webserver
     spec:
+      initContainers:
+        - name: init-cont
+          image: busybox:1.31
+          command: ['sh', '-c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z {{.Values.database.serviceName}} 3306; do sleep 1; printf "-"; done; echo -e "  >> MySQL DB Server has started";']
       containers:
-        - image: biscofil/kairos_php:webserver
+        - image: "{{ .Values.image }}:{{ .Chart.AppVersion }}"
           imagePullPolicy: Always
           name: kairos-webserver
+          envFrom:
+            - configMapRef:
+                name: kairos-webserver-env
+            - secretRef:
+                name: kairos-secrets
           ports:
             - containerPort: 80
           resources: {}
           tty: true
           volumeMounts:
-            - mountPath: /var/www/html/storage
+            - mountPath: /var/www/html/storage/app
               name: kairos-webserver-claim
-          envFrom:
-            - secretRef:
-                name: kairos-webserver-secrets
       restartPolicy: Always
       volumes:
         - name: kairos-webserver-claim
