--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,23 @@ on:
     - release/*
 
 jobs:
+
+  npm_test:
+    runs-on: ubuntu-latest
+
+    steps:
+     - name: Checkout
+       uses: actions/checkout@v2
+     - name: Setup Node.js
+       uses: actions/setup-node@v2-beta
+       with:
+         node-version: '12'
+         check-latest: true
+     - name: Install NPM dependencies
+       run: npm ci
+     - name: Test NPM compilation
+       run: npm run prod
+
   php_db_test:
     runs-on: ubuntu-latest
     container:
