--- a/package.json
+++ b/package.json
@@ -25,23 +25,21 @@
         "iconv-lite": "^0.6.2",
         "install": "^0.13.0",
         "jquery": "^3.6.0",
-        "laravel-mix": "^6.0.17",
-        "laravel-mix-sri": "0.0.6",
+        "laravel-mix": "6.0.13",
         "lodash": "^4.17.19",
         "luxon": "^1.27.0",
         "moment": "^2.29.1",
         "node-rsa": "^1.1.1",
         "normalize.css": "8.0.1",
-        "postcss": "^8.2.10",
         "pusher-js": "^7.0.3",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "sha1": "^1.1.1",
         "sha2": "^1.0.2",
         "tinygradient": "^1.1.4",
         "toastr": "^2.1.4",
-        "vue": "^2.5.11",
+        "vue": "2.6.14",
+        "vue-template-compiler": "2.6.14",
         "vue-axios": "^3.2.4",
         "vue-chartjs": "^3.5.1",
         "vue-country-flag": "^2.0.4",
@@ -49,7 +47,7 @@
         "vue-form-wizard": "^0.8.4",
         "vue-i18n": "^8.24.3",
         "vue-js-modal": "^2.0.0-rc.6",
-        "vue-loader": "^15.9.6",
+        "vue-loader": "15.9.6",
         "vue-moment": "^4.1.0",
         "vue-object-view": "^0.4.2",
         "vue-query-builder": "^0.8.2",
@@ -60,7 +58,10 @@
         "vuejs-dialog": "^1.4.2",
         "vuetable-3": "^3.3.3",
         "vuex": "^3.6.2",
-        "weekstart": "^1.1.0"
+        "weekstart": "^1.1.0",
+        "webpack": "5.24.2",
+        "sass": "1.32.8",
+        "@growthbunker/vuesocial": "0.1.2"
     },
     "devDependencies": {}
 }
