maintenance mode, dump-autoload

--- a/helm/templates/database-migration-job.yaml
+++ b/helm/templates/database-migration-job.yaml
@@ -25,7 +25,10 @@ spec:
         args:
           - -c
           - >-
-              php artisan migrate
+              php artisan down --refresh=15;
+              php artisan migrate;
+              php artisan up
+
       restartPolicy: Never
       volumes:
         - name: kairos-webserver-claim
