--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -96,19 +96,19 @@ jobs:
           php artisan generate:jwt-keypair
           vendor/phpunit/phpunit/phpunit tests/ --colors=never --configuration phpunit_gitlab.xml
 
-  helm-build:
-    runs-on: ubuntu-latest
-    needs: [npm_test_build, php_test_build]
-    permissions:
-      contents: write
+  # helm-build:
+  #   runs-on: ubuntu-latest
+  #   needs: [npm_test_build, php_test_build]
+  #   permissions:
+  #     contents: write
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.7.0
-        env:
-          CR_TOKEN: "${{ secrets.GH_TOKEN }}"
+  #     - name: Run chart-releaser
+  #       uses: helm/chart-releaser-action@v1.7.0
+  #       env:
+  #         CR_TOKEN: "${{ secrets.GH_TOKEN }}"
